# tortured-phrase-classifier

./: .coverage  .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  registry_growth.py  test_paper.txt
.github/workflows/: ci.yml
data/appendix/: README.md  appendix_a_registry_export.csv  appendix_b_corpus_statistics.csv  appendix_c_ablation_results.csv  appendix_d_novel_candidates.csv
data/ground_truth/: README.md  confirmed_tortured.tsv
notebooks/: 01_data_acquisition.executed.ipynb  01_data_acquisition.ipynb  02_registry_analysis.ipynb  03_layer1_layer2_evaluation.ipynb  04_layer3_mlm_perplexity.ipynb  05_combined_evaluation.ipynb  06_figures_for_paper.ipynb
signals/: schema.json
signals/phrases/biochemistry/: amino_corrosive.yaml  nucleic_harsh.yaml
signals/phrases/computing/: fake_neural_organization.yaml  profound_learning.yaml
signals/phrases/general/: flag_to_commotion.yaml
signals/phrases/medicine/: bosom_peril.yaml
signals/phrases/statistics/: irregular_examination.yaml
tests/: test_all.py
tortured_phrase_classifier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tpc/: __init__.py  api.py  cli.py  pipeline.py  report.py
tpc/acquisition/: __init__.py  pubmed.py  synthetic.py
tpc/evaluation/: __init__.py  metrics.py  registry_growth.py
tpc/layers/: __init__.py  embedding.py  exact_match.py  mlm_perplexity.py
tpc/registry/: __init__.py  iso704_validator.py  loader.py  validator.py  warrant.py
